--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 
-<p>ManyOne is an initiative by Klaas Nienhuis and Frodo Schering that focuses on making complex products, processes and data accessible and engaging. By using modern technology we help organizations create thoughtful experiences for their audience and guide them to a focused outcome. We are all independent professionals which enables us to assemble the best team for the task at hand. Besides doing commercial work ManyOne is also a place where experts from different fields share their knowledge, experiment and innovate.</p>
+<p>ManyOne is an initiative by Klaas Nienhuis and Frodo Schering where experts from different fields share their knowledge, experiment and push for innovation. Having both worked in a network of freelancers for over ten years they wanted to create a team of independent professionals that operate as one coordinated and competent team while maintaining the flexibility of being freelancers. This way the best people can be selected for the task at hand.</p>
 <img class="arrow" id="arrow-left" src="images/arrow-left.svg"/>
 	<img class="arrow" id="arrow-right" src="images/arrow-right.svg"/>
 
