--- a/work.html
+++ b/work.html
@@ -1,7 +1,7 @@
 		<div id="projects">
-	<div class="project-big">
+	<div id="zodiac" class="project-big">
 		<img class="project-image" src="images/zodiac-boat-animation.png"></img>
-		<a id="zodiac" href="#">Zodiac Nautic — 3D Boat Configurator</a>
+		<a href="#">Zodiac Nautic — 3D Boat Configurator</a>
 	</div>
 	<div class="project-small">
 		<video autoplay loop playsinline muted class="project-image" src="images/ikea-place15.mp4"></video>
