--- a/work.html
+++ b/work.html
@@ -1,6 +1,6 @@
 		<div id="projects">
 	<div id="zodiac" class="project-big">
-		<img class="project-image" src="images/zodiac-boat-animation.gif"></img>
+		<img class="project-image" src="images/zodiac-boat-animation.mp4"></img>
 		<a href="#">Zodiac Nautic — 3D Boat Configurator</a>
 	</div>
 	<div class="project-small">
