--- a/about.html
+++ b/about.html
@@ -7,14 +7,14 @@
 	
 	<div id="team-profiles">
 		<div class="profile">
-			<img class="photo" src="images/profile-photo-dummy-bg.png"></img>
+			<img class="photo" src="images/test team.mov"></img>
 			<div class="profile-info">
 				<p class="name">Klaas Nienhuis</p>
 				<p>Co-founder and 3D Designer</p>
 			</div>
 		</div>
 		<div class="profile">
-			<img class="photo" src="images/profile-photo-dummy3-bg.png"></img>
+			<img class="photo" src="images/test team2.mov"></img>
 			<div class="profile-info">
 				<p class="name">Klaas Nienhuis</p>
 				<p>Co-founder and 3D Designer</p>
