--- a/about.html
+++ b/about.html
@@ -1,28 +1,39 @@
 
+<p>ManyOne is an initiative by Klaas Nienhuis and Frodo Schering where experts from different fields share their knowledge, experiment and push for innovation. Having both worked in a network of freelancers for over ten years they wanted to create a team of independent professionals that operate as one coordinated and competent team while maintaining the flexibility of being freelancers. This way the best people can be selected for the task at hand.</p>
+<img class="arrow" id="arrow-left" src="images/arrow-left.svg"/>
+	<img class="arrow" id="arrow-right" src="images/arrow-right.svg"/>
 
-
-		<div class="profile" style="width: 400px; top: 200px; left: 800px;">
-			<img class="photo" src="images/test team3.mp4"></img>
+<div id="team">
+	
+	<div id="team-profiles">
+		<div class="profile">
+			<img class="photo" src="images/test team.mov"></img>
 			<div class="profile-info">
-			
+				<p class="name">Klaas Nienhuis</p>
+				<p>Co-founder and 3D Designer</p>
 			</div>
 		</div>
-		<div class="profile" style="top: 400px; left: 500px;">
-			<img class="photo" src="images/test team2.mp4"></img>
+		<div class="profile">
+			<img class="photo" src="images/mages/test team2.mov"></img>
 			<div class="profile-info">
-			
+				<p class="name">Klaas Nienhuis</p>
+				<p>Co-founder and 3D Designer</p>
 			</div>
 		</div>
-		<div class="profile" style="top:600px; left: 800px;">
+		<div class="profile">
 			<img class="photo" src="images/profile-photo-dummy4-bg.png"></img>
 			<div class="profile-info">
-			
+				<p class="name">Frodo Schering</p>
+				<p>Co-founder and Designer</p>
 			</div>
 		</div>
-		<div class="profile" style="top: 100px; left: 200px;">
+		<div class="profile">
 			<img class="photo" src="images/profile-photo-dummy2-bg.png"></img>
 			<div class="profile-info">
-			
+				<p class="name">Jeroen Breen</p>
+				<p>Front-end Developer</p>
 			</div>
 		</div>
+	</div>
+</div>
 
