--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<video width="320" height="240" controls>
-  <source src="iPhone 6 7 8 – ContainerDiscounts.com – Interaction Design.mov" type="video/mov">
+<video width="375" height="667" controls>
+  <source src="iphone.mov" type="video/mov">
   Your browser does not support the video tag.
 </video>
 
