--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <video width="375" height="667" controls>
-  <source src="iphone.mov" type="video/mov">
+  <source src="iphone.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
