--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body style="display: flex;
+  justify-content: center;
+  align-items: center;">
 
 <video width="375" height="667" controls>
   <source src="iphone.mp4" type="video/mp4">
