--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-<body style="display: flex;
-  justify-content: center;
-  align-items: center;">
+<body style="position: relative;">
 
-<video width="375" height="667" controls>
+<video width="375" height="667" controls style="width: 300px;
+  height: 100px;
+  padding: 20px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  margin: -70px 0 0 -170px;">
   <source src="iphone.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
