--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body style="position: relative;">
+<body style="display: table">
 
-<video width="375" height="667" controls style="width: 375px;
-  height: 667px;
-
-  position: absolute;
-  top: 50%;
-  left: 50%;
-
-  margin: -333px 0 0 -187px ;">
+<div style="display: table-cell; text-align: center; vertical-align: middle;">
+<video width="375" height="667" controls >
   <source src="iphone.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
