--- a/positioning.html
+++ b/positioning.html
@@ -32,6 +32,7 @@ video{
 
 	<article>
 		<h1>Container rotation and position modifications</h1>
+		<p>[Introduction]</p>
 		<h2>Free rotation</h2>
 		<p>When swiping on mobile the bottom sheet with modifications slides down and the container can be freely rotated. Clicking or swiping the panel up slide the bottom sheet up again.  </p>		
 	
@@ -41,11 +42,11 @@ video{
 		</video>
 		<h2>Lock orientation</h2>
 		<p>
-		When the bottom sheet is active we can lock the container orientation in certain sections for better control over positioning modifications.
+		When the bottom sheet is active we can lock the container orientation in certain sections for better control over positioning modifications. This way the user can not accidentally rotate the container while position modifications. The user can still switch to free rotation mode at any time. When the bottom is made active again the container locks back into place.
 		</p>
 	
 		<video width="375" height="667" controls >
-  			<source src="free-rotation.mp4" type="video/mp4">
+  			<source src="lock-orientation.mp4" type="video/mp4">
   		Your browser does not support the video tag.
 		</video>
 	</article>
