--- a/positioning.html
+++ b/positioning.html
@@ -4,6 +4,7 @@
 body {
  font-family: sans-serif;
  opacity: 0.87;
+ margin-bottom: 192px;
 }
 
 p{
@@ -36,7 +37,7 @@ video{
 		<h2>Free rotation</h2>
 		<p>When swiping on mobile the bottom sheet with modifications slides down and the container can be freely rotated. Clicking or swiping the panel up slide the bottom sheet up again.  </p>		
 	
-		<video width="375" height="667" controls >
+		<video width="375" height="667" autoplay muted loop>
   			<source src="free-rotation.mp4" type="video/mp4">
   Your browser does not support the video tag.
 		</video>
@@ -45,7 +46,7 @@ video{
 		When the bottom sheet is active we can lock the container orientation in certain sections for better control over positioning modifications. This way the user can not accidentally rotate the container while position modifications. The user can still switch to free rotation mode at any time. When the bottom is made active again the container locks back into place.
 		</p>
 	
-		<video width="375" height="667" controls >
+		<video width="375" height="667" autoplay muted loop>
   			<source src="lock-orientation.mp4" type="video/mp4">
   		Your browser does not support the video tag.
 		</video>
