--- a/positioning.html
+++ b/positioning.html
@@ -52,11 +52,11 @@ video{
 		</video>
 		<h2>Modification placement</h2>
 		<p>
-		Adding a modification can be done by either clicking a modification card or dragging and dropping a modification card onto the container. A placed modification can be selected by tapping it. When a modification is selected a button appears to position the modification. This button is added on mobile so the modification is not obscured by the users finger and the touch area is always big enough even with when modifications are small. A info card also appears for exact positioning and deleting the modifcation.
+		Adding a modification can be done by either clicking a modification card or dragging and dropping a modification card onto the container. A placed modification can be selected by tapping it. When a modification is selected a button appears to position the modification. This button is added on mobile so the modification is not obscured by the users finger and the touch area is always big enough even with when modifications are small. A info card also appears for exact positioning and deleting the modification.
 		</p>
 	
 		<video width="375" height="667" autoplay muted loop>
-  			<source src="lock-orientation.mp4" type="video/mp4">
+  			<source src="modification- placement.mp4" type="video/mp4">
   		Your browser does not support the video tag.
 		</video>
 
