--- a/positioning.html
+++ b/positioning.html
@@ -35,7 +35,7 @@ video{
 		<h1>Container rotation and position modifications</h1>
 		<p>[Introduction]</p>
 		<h2>Free rotation</h2>
-		<p>When swiping on mobile the bottom sheet with modifications slides down and the container can be freely rotated. Clicking or swiping the panel up slide the bottom sheet up again.  </p>		
+		<p>When swiping on mobile the bottom sheet with modifications slides down and the container can be freely rotated. Clicking or swiping the panel up slides the bottom sheet up again.  </p>		
 	
 		<video width="375" height="667" autoplay muted loop>
   			<source src="free-rotation.mp4" type="video/mp4">
