--- a/positioning.html
+++ b/positioning.html
@@ -64,6 +64,10 @@ video{
 		<p>
 		
 		</p>
+		<video width="375" height="667" autoplay muted loop>
+  			<source src="Selecting between multiple modifications.mp4" type="video/mp4">
+  		Your browser does not support the video tag.
+		</video>
 	</article>
 </body>
 </html>
