--- a/positioning.html
+++ b/positioning.html
@@ -62,7 +62,7 @@ video{
 
 		<h2>Selecting between multiple modifications</h2>
 		<p>
-		
+		When there are multiple modifications switching between modifications can be done by tapping a modification or by swiping the info cards. When modifications are smaller than the minimum touch area of the finger (48px by 48px) the app calculates the nearest modification from the area where the user tapped the screen. Alternatively the user can use the info cards to select a modification. This is especially handy when there are multiple small objects grouped together.
 		</p>
 		<video width="375" height="667" autoplay muted loop>
   			<source src="Selecting between multiple modifications.mp4" type="video/mp4">
