--- a/positioning.html
+++ b/positioning.html
@@ -32,8 +32,8 @@ video{
 <body>
 
 	<article>
-		<h1>Container rotation and position modifications</h1>
-		<p>[Introduction]</p>
+		<h1>Container rotation and position modifications on mobile</h1>
+		<p>Precise positioning of multiple objects in a 3D environment on a small screen is hard. A finger is far less precise than a mouse and can also obscure the object being positioned. In this case we have the added complexity of a rotating parent object (container) and child objects (modifications) that can be positioned on different axes. It gets frustrating when the user wants to position a modification and accidentally rotates the container or vice versa. Also switching between objects of various sizes can be challenging. The interation design illustrated in the videos below addresses these issues.</p>
 		<h2>Free rotation</h2>
 		<p>When swiping on mobile the bottom sheet with modifications slides down and the container can be freely rotated. Clicking or swiping the panel up slides the bottom sheet up again.  </p>		
 	
