--- a/positioning.html
+++ b/positioning.html
@@ -4,11 +4,11 @@
 body {
  font-family: sans-serif;
  opacity: 0.87;
- margin-bottom: 192px;
+ margin: 32px 32px 192px 32px;
 }
 
 p{
-	
+	width: 840px;	
 	line-height: 24px;
 }
 h1{
@@ -22,10 +22,10 @@ h2{
 	margin-top: 48px;
 }
 article{
-	width: 840px;
+	width: 1366px;
 	margin: 0 auto;
 }
-video{
+video, img{
 	margin: 16px 0;
 }
 </style>
@@ -68,6 +68,12 @@ video{
   			<source src="Selecting between multiple modifications.mp4" type="video/mp4">
   		Your browser does not support the video tag.
 		</video>
+
+		<h2>Desktop</h2>
+		<p>
+		On desktop we can keep the container in free rotation mode at all time as positioning with the mouse on a bigger screen as much more precise.
+		</p>
+		<img src="modifications-desktop@2x.png" width="1366" height="767">
 	</article>
 </body>
 </html>
