--- a/positioning.html
+++ b/positioning.html
@@ -71,7 +71,7 @@ video, img{
 
 		<h2>Desktop</h2>
 		<p>
-		On desktop we can keep the container in free rotation mode at all time as positioning with the mouse on a bigger screen as much more precise.
+		On desktop we can keep the container in free rotation mode at all time as positioning with the mouse on a bigger screen is much more precise.
 		</p>
 		<img src="modifications-desktop@2x.png" width="1366" height="767">
 	</article>
