--- a/positioning.html
+++ b/positioning.html
@@ -43,7 +43,7 @@ video, img{
 		</video>
 		<h2>Lock orientation</h2>
 		<p>
-		When the bottom sheet is active we can lock the container orientation in certain sections for better control over positioning modifications. This way the user can not accidentally rotate the container while positioning. The user can still switch to free rotation mode at any time. When the bottom sheet is made active again the container locks back into place.
+		When the bottom sheet is active we can lock the container orientation in certain sections for better control over positioning modifications. This way the user can not accidentally rotate the container while positioning. The user can still switch to free rotation mode at any time. When the bottom sheet is made active again the container locks back into place rotating to the nearest side.
 		</p>
 	
 		<video width="375" height="667" autoplay muted loop>
