--- a/vmn3.html
+++ b/vmn3.html
@@ -3,7 +3,7 @@
 <body style="background-color: #ccc; display: table; margin: 0; height: 100vh; width: 100vw;">
 
 <div style="display: table-cell; text-align: center; vertical-align: middle;">
-<video width="375" height="812"  autoplay="true" muted="true">
+<video width="375" height="812" autoplay muted loop>
   <source src="vmn3.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
