--- a/cd/modes-desktop.html
+++ b/cd/modes-desktop.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color: #ccc; display: table; margin: 0; height: 100vh; width: 100vw;">
+<body style="background-color: #E4E4E4; display: table; margin: 0; height: 100vh; width: 100vw;">
 
 <div style="display: table-cell; text-align: center; vertical-align: middle;">
 <video width="1468" height="900" autoplay muted loop >
