--- a/cd/desktop/index.html
+++ b/cd/desktop/index.html
@@ -41,6 +41,11 @@ video, img{
 		  <source src="annotations.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
 		</video>
+		<h2>Card hover</h2>
+		<video width="1468" height="768" autoplay muted loop >
+		  <source src="card hover.mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		</video>
 		<h2>Loading 3D model</h2>
 		<video width="1468" height="768" autoplay muted loop >
 		  <source src="loader.mp4" type="video/mp4">
