--- a/cd/desktop/index.html
+++ b/cd/desktop/index.html
@@ -5,6 +5,7 @@ body {
  font-family: sans-serif;
  opacity: 0.87;
  margin: 32px 32px 192px 32px;
+ background-color: #E4E4E4
 }
 
 p{
@@ -29,7 +30,6 @@ video, img{
 	margin: 16px 0;
 }
 </style>
-<body style="background-color: #E4E4E4; display: table; margin: 0; height: 100vh; width: 100vw;">
 
 
 <article>
@@ -51,7 +51,17 @@ video, img{
 		  <source src="loader.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
 		</video>
+		<h2>Product page to modifications</h2>
+		<video width="1468" height="768" autoplay muted loop >
+		  <source src="product page to modifications.mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		</video>
+		<h2>Modifications to product page</h2>
+		<video width="1468" height="768" autoplay muted loop >
+		  <source src="modifications to product page.mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		</video>
+
 </article>	
 
-</body>
 </html>
