--- a/cd/desktop/index.html
+++ b/cd/desktop/index.html
@@ -61,6 +61,11 @@ video, img{
 		  <source src="modifications to product page.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
 		</video>
+		<h2>Hide and show filters</h2>
+		<video width="1468" height="768" autoplay muted loop >
+		  <source src="hide and show filters.mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		</video>
 
 </article>	
 
