--- a/cd/desktop/index.html
+++ b/cd/desktop/index.html
@@ -51,6 +51,11 @@ video, img{
 		  <source src="loader.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
 		</video>
+		<h2>Hide and show filters</h2>
+		<video width="1468" height="768" autoplay muted loop >
+		  <source src="hide and show filters.mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		</video>
 		<h2>Product page to modifications</h2>
 		<video width="1468" height="768" autoplay muted loop >
 		  <source src="product page to modifications.mp4" type="video/mp4">
@@ -61,11 +66,17 @@ video, img{
 		  <source src="modifications to product page.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
 		</video>
-		<h2>Hide and show filters</h2>
+		<h2>Product page to modifications - alternative</h2>
 		<video width="1468" height="768" autoplay muted loop >
-		  <source src="hide and show filters.mp4" type="video/mp4">
+		  <source src="product page to modifications - alternative.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
 		</video>
+		<h2>Modifications to product page - alternative</h2>
+		<video width="1468" height="768" autoplay muted loop >
+		  <source src="modifications to product page - alternative.mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		</video>
+		
 
 </article>	
 
