--- a/cd/desktop/index.html
+++ b/cd/desktop/index.html
@@ -34,9 +34,13 @@ video, img{
 
 <article>
 		<h1>Desktop animations and transitions</h1>
-		
+
+		<h2>Homepage</h2>
+		<video width="1468" height="768" autoplay muted loop >
+		  <source src="homepage.mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		</video>
 		<h2>Annotations</h2>
-		
 		<video width="1468" height="768" autoplay muted loop >
 		  <source src="annotations.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
