--- a/cd/desktop/index.html
+++ b/cd/desktop/index.html
@@ -61,21 +61,13 @@ video, img{
 		  Your browser does not support the video tag.
 		</video>
 		<h2>Product page to modifications</h2>
-		<video width="1468" height="768" autoplay muted loop >
-		  <source src="product page to modifications.mp4" type="video/mp4">
-		  Your browser does not support the video tag.
-		</video>
-		<h2>Modifications to product page</h2>
-		<video width="1468" height="768" autoplay muted loop >
-		  <source src="modifications to product page.mp4" type="video/mp4">
-		  Your browser does not support the video tag.
-		</video>
-		<h2>Product page to modifications - alternative</h2>
+	
+		<h2>Product page to modifications</h2>
 		<video width="1468" height="768" autoplay muted loop >
 		  <source src="product page to modifications - alternative.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
 		</video>
-		<h2>Modifications to product page - alternative</h2>
+		<h2>Modifications to product page</h2>
 		<video width="1468" height="768" autoplay muted loop >
 		  <source src="modifications to product page - alternative.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
