--- a/cd/desktop/index.html
+++ b/cd/desktop/index.html
@@ -80,6 +80,11 @@ video, img{
 		  <source src="modifications to product page - alternative.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
 		</video>
+		<h2>Button hovers</h2>
+		<video width="1468" height="768" autoplay muted loop >
+		  <source src="button hovers.mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		</video>
 		
 
 </article>	
