--- a/cd/sizing and positioning/sizing alternative.html
+++ b/cd/sizing and positioning/sizing alternative.html
@@ -33,7 +33,7 @@ video, img{
 
 
 <article>
-		<h1>Sizing and positioning – Alternative</h1>
+		<h1>Sizing and positioning - Alternative</h1>
 
 		<h2>Mobile</h2>
 		<video width="370" height="666" autoplay muted loop >
