--- a/cd/sizing and positioning/sizing alternative 2.html
+++ b/cd/sizing and positioning/sizing alternative 2.html
@@ -33,19 +33,19 @@ video, img{
 
 
 <article>
-		<h1>Sizing and positioning</h1>
+		<h1>Sizing and positioning - Alternative 2</h1>
 
 		<h2>Mobile</h2>
 		<video width="370" height="666" autoplay muted loop >
-		  <source src="sizing and positioning mobile.mp4" type="video/mp4">
-		  Your browser does not support the video tag.
-		</video>
-		<h2>Desktop</h2>
-		<video width="1468" height="768" autoplay muted loop >
-		  <source src="sizing and positioning desktop.mp4" type="video/mp4">
+		  <source src="sizing mobile.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
 		</video>
 
+		<h2>Desktop</h2>
+		<video width="1468" height="768" autoplay muted loop >
+		  <source src="sizing desktop.mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		</video>
 
 </article>	
 
