--- a/cd/mobile/index.html
+++ b/cd/mobile/index.html
@@ -35,6 +35,12 @@ video, img{
 <article>
 		<h1>Mobile animations and transitions</h1>
 
+		<h2>Homepage swipe</h2>
+		<video width="370" height="666" autoplay muted loop >
+		  <source src="mobile homepage swipe.mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		</video>
+
 		<h2>Menu</h2>
 		<video width="370" height="666" autoplay muted loop >
 		  <source src="mobile menu.mp4" type="video/mp4">
