--- a/cd/sizing and positioning/index.html
+++ b/cd/sizing and positioning/index.html
@@ -33,16 +33,10 @@ video, img{
 
 
 <article>
-		<h1>Sizing and positioning</h1>
+		<h1>Sizing desktop hover</h1>
 
-		<h2>Mobile</h2>
-		<video width="370" height="666" autoplay muted loop >
-		  <source src="sizing and positioning mobile.mp4" type="video/mp4">
-		  Your browser does not support the video tag.
-		</video>
-		<h2>Desktop</h2>
 		<video width="1468" height="768" autoplay muted loop >
-		  <source src="sizing and positioning desktop.mp4" type="video/mp4">
+		  <source src="sizing desktop hover.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
 		</video>
 
