--- a/cd/sizing and positioning/index.html
+++ b/cd/sizing and positioning/index.html
@@ -36,7 +36,7 @@ video, img{
 		<h1>Sizing desktop hover</h1>
 
 		<video width="1468" height="768" autoplay muted loop >
-		  <source src="sizing desktop hover.mp4" type="video/mp4">
+		  <source src="sizing desktop.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
 		</video>
 
