--- a/vmn/relatie-bewerken.html
+++ b/vmn/relatie-bewerken.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color: #fff;display: table; margin: 0; height: 100vh; width: 100vw;">
+<body style="background-color: #E4E4E4;display: table; margin: 0; height: 100vh; width: 100vw;">
 
 <div style="display: table-cell; text-align: center; vertical-align: middle;">
 <video width="1372" height="768" controls >
