--- a/kunstmuseum/kroniek/index.html
+++ b/kunstmuseum/kroniek/index.html
@@ -4,7 +4,7 @@
 
 <div style="display: table-cell; text-align: center; vertical-align: middle;">
 <video width="1364" height="768"  autoplay muted loop>
-  <source src="km_kroniek3.mp4" type="video/mp4">
+  <source src="km_kroniek.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
