--- a/kunstmuseum/intranet/index.html
+++ b/kunstmuseum/intranet/index.html
@@ -4,7 +4,7 @@
 
 <div style="display: table-cell; text-align: center; vertical-align: middle;">
 <video width="1577" height="768"  autoplay muted controls loop>
-  <source src="km_intranet.mp4" type="video/mp4">
+  <source src="KM_Intranet_Web_1577.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
