--- a/cirrus/index.html
+++ b/cirrus/index.html
@@ -5,7 +5,7 @@
 <div style="display: table-cell; text-align: center; vertical-align: middle;">
 <video width="375" height="812"  autoplay muted loop>
   <source src="select_aircraft_mobile.mp4" type="video/mp4">
-  Your browser does ndot support the video tag.
+  Your browser does not support the video tag.
 </video>
 
 </body>
