--- a/anitomical/index.html
+++ b/anitomical/index.html
@@ -57,6 +57,7 @@
         #sidepanel{
             background-color: #F2F2F2;
             height: 92vh;
+            overflow-y: auto;
             width: 100%;
         }
 
@@ -154,7 +155,7 @@
         }
 
         .chapters {
-            margin: 1.618rem 0;
+            margin: 1.348rem 0;
             padding-inline-start: 0;
         }
         
@@ -162,7 +163,7 @@
             border-bottom: 1px solid #BCBCBC;
             font-weight: bold;
             list-style-position: inside;
-            padding: 0.833rem 1.3484rem;
+            padding: 0.618rem 1.3484rem;
             margin: 0;
         }
 
@@ -237,6 +238,21 @@
             padding: 0 1.3484rem 0 1.348rem;
         }
 
+       ::-webkit-scrollbar {
+            width: 0.833rem;
+            background:#E6E6E6;
+        }
+
+        ::-webkit-scrollbar-track {   
+            border-bottom: none;
+            border-top: none;    
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: #BFBFBF;
+            border: 0.17rem solid #E6E6E6;
+            border-radius: 1rem; 
+        }
 
         @media only screen and (min-width:1600px){
 
@@ -267,13 +283,29 @@
         </div>           
         <div id="sidepanel">
             <div id="content">
-                <h2>Introduction</h2>
+                <!-- <h2>Introduction</h2>
                 <p>The great pond snail, also called pond snail or common pond snail (Lymnaea stagnalis) is a freshwater snail from the pond snail family (Lymnaeidae). The pond snail only lives in stagnant waters, such as ditches, ponds and fens, and, with a shell of up to 6 centimeters, it is one of the largest freshwater snails in Western Europe.</p>
-                 <ol class="chapters">
+                <ol class="chapters">
                     <li>Overview<img class="icon chevron right" src="navigate_next.svg"/></li>
                     <li>Digestive System<img class="icon chevron right" src="navigate_next.svg"/></li>
                     <li>Vascular System<img class="icon chevron right" src="navigate_next.svg"/></li>
                     <li>Reproductive System<img class="icon chevron right" src="navigate_next.svg"/></li>
+                    <li>Nervous System<img class="icon chevron right" src="navigate_next.svg"/></li>
+                </ol> --> 
+                <h2>2. Digestive system</h2>
+                <p>TA snail's digestive system is relatively simple. Most organs are also easily recognizable.</p>
+                <ol class="chapters">
+                    <li>Overview<img class="icon chevron right" src="navigate_next.svg"/></li>
+                    <li>Digestive System<img class="icon chevron right" src="navigate_next.svg"/></li>
+                    <li>Vascular System<img class="icon chevron right" src="navigate_next.svg"/></li>
+                    <li>Reproductive System<img class="icon chevron right" src="navigate_next.svg"/></li>
+                    <li>Nervous System<img class="icon chevron right" src="navigate_next.svg"/></li>
+                    <li>Nervous System<img class="icon chevron right" src="navigate_next.svg"/></li>
+                    <li>Overview<img class="icon chevron right" src="navigate_next.svg"/></li>
+                    <li>Digestive System<img class="icon chevron right" src="navigate_next.svg"/></li>
+                    <li>Vascular System<img class="icon chevron right" src="navigate_next.svg"/></li>
+                    <li>Reproductive System<img class="icon chevron right" src="navigate_next.svg"/></li>
+                    <li>Nervous System<img class="icon chevron right" src="navigate_next.svg"/></li>
                     <li>Nervous System<img class="icon chevron right" src="navigate_next.svg"/></li>
                 </ol>
             </div>
@@ -283,7 +315,6 @@
             <div id="animal-toolbar">
                 <div class="animal-name-container"><h1 class="animal-name">Roman Snail</h1><a class="icon-button" href="#"><img class="icon female-with-dropdown" src="icon_female_with_dropdown.svg"/></a></div><div class="animal-toolbar-options"><a class="icon-button" href="#"><img class="icon" src="fullscreen.svg"/></a><a class="icon-button" href="#"><img class="icon" src="more_vert.svg"/></a></div>
             </div>
-            <!--<div class="sketchfab-embed-wrapper"> <iframe title="poelslak - copy" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share  src="https://sketchfab.com/models/0c107cf642864e4c8e0103484cb2afdb/embed?autostart=1&annotations_visible=0&transparent=1&ui_animations=0&ui_infos=0&ui_stop=0&ui_inspector=0&ui_watermark_link=0&ui_watermark=0&ui_ar=0&ui_help=0&ui_settings=0&ui_vr=0&ui_fullscreen=0&ui_annotations=0&dnt=1"> </iframe> </div> -->
             <iframe id="api-frame"></iframe>
         </div>
     </div>
